update path to images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="img-fluid" src="images/hand2.png" alt="" />
+          <img class="img-fluid" src="./images/hand2.png" alt="" />
         </div>
       </div>
     </section>
@@ -85,7 +85,7 @@
       <!-- Museum of Candy row-->
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="img-fluid" src="images/milk.png" alt="" />
+          <img class="img-fluid" src="./images/milk.png" alt="" />
         </div>
 
         <div class="col-md-6 text-center order-1 order-md-2">
@@ -117,7 +117,7 @@
               <h2>MUSEUM OF CANDY</h2>
               <img
                 class="d-none d-lg-inline"
-                src="/images/lolli_icon.png"
+                src="./images/lolli_icon.png"
                 alt=""
               />
               <p class="lead">
@@ -132,13 +132,13 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="img-fluid" src="/images/gumball.png" alt="" />
+          <img class="img-fluid" src="./images/gumball.png" alt="" />
         </div>
       </div>
       <!-- Museum of Candy 3rd row -->
       <div class="row align-items-center content">
         <div class="col-md-6 order-2 order-md-1">
-          <img class="img-fluid" src="/images/sprinkles.png" alt="" />
+          <img class="img-fluid" src="./images/sprinkles.png" alt="" />
         </div>
 
         <div class="col-md-6 text-center order-1 order-md-2">
@@ -147,7 +147,7 @@
               <h2>MUSEUM OF CANDY</h2>
               <img
                 class="d-none d-lg-inline"
-                src="/images/lolli_icon.png"
+                src="./images/lolli_icon.png"
                 alt=""
               />
               <p class="lead">
